--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rent_spot_backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Harshadkumar Patel",
