--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,13 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Harshadkumar Patel",
+  "author": "Prakash singh ",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
